# USF4-Rollback

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CMakeUserPresets.json  CONTRIBUTING.md  LICENSE  LICENSE.md  README.md  vcpkg-configuration.json  vcpkg.json
.gitlab/issue_templates/: Bug.md
_INSTRUCTIONS/: _Fixing Errors.txt  _Instructions (In-Game Settings)  _Instructions (In-Game Settings).txt  _Instructions (Rollback).txt  _Instructions _Swapping Game Versions!-.txt  _Nvidia Control Panel Instructions  _Nvidia Control Panel Instructions.txt  _ZeroTier Instructions  _ZeroTier Instructions.txt
cmake/: FindAsio.cmake  FindDearImgui.cmake  FindDetours.cmake  FindValveFileVDF.cmake
src/Dimps/: Dimps.cxx  Dimps__Eva.cxx  Dimps__Eva.hxx  Dimps__Event.cxx  Dimps__Event.hxx  Dimps__Game.cxx  Dimps__Game.hxx  Dimps__GameEvents.cxx  Dimps__GameEvents.hxx  Dimps__Game__Battle.cxx  Dimps__Game__Battle.hxx  Dimps__Game__Battle__Action.hxx  Dimps__Game__Battle__Camera.cxx  Dimps__Game__Battle__Camera.hxx  Dimps__Game__Battle__Chara.cxx  Dimps__Game__Battle__Chara.hxx  Dimps__Game__Battle__Chara__Actor.cxx  Dimps__Game__Battle__Chara__Actor.hxx  Dimps__Game__Battle__Chara__Unit.cxx  Dimps__Game__Battle__Command.cxx  Dimps__Game__Battle__Command.hxx  Dimps__Game__Battle__Command__CommandImpl.cxx  Dimps__Game__Battle__Command__CommandImpl.hxx  Dimps__Game__Battle__Effect.cxx  Dimps__Game__Battle__GameManager.hxx  Dimps__Game__Battle__Hud.cxx  Dimps__Game__Battle__Hud.hxx  Dimps__Game__Battle__System.cxx  Dimps__Game__Battle__System.hxx  Dimps__Game__Battle__Training.cxx  Dimps__Game__Battle__Training.hxx  Dimps__Game__Battle__Vfx.hxx  Dimps__Math.hxx  Dimps__Pad.cxx  Dimps__Pad.hxx  Dimps__Platform.cxx  Dimps__Platform.hxx  Dimps__UserApp.cxx
src/game/: Dimps.cxx  Dimps.hxx  Dimps__Eva.cxx  Dimps__Eva.hxx  Dimps__Eva__TaskCore.cxx  Dimps__Eva__TaskCore.hxx  Dimps__Eva__TaskCoreRegistry.cxx  Dimps__Eva__TaskCoreRegistry.hxx  Dimps__Event.cxx  Dimps__Event.hxx  Dimps__Game.cxx  Dimps__Game.hxx  Dimps__GameEvents.cxx  Dimps__GameEvents.hxx  Dimps__GameEvents__RootEvent.cxx  Dimps__GameEvents__RootEvent.hxx  Dimps__Game__Battle.cxx  Dimps__Game__Battle.hxx  Dimps__Game__Battle__Action.cxx  Dimps__Game__Battle__Camera.hxx  Dimps__Game__Battle__Chara.cxx  Dimps__Game__Battle__Chara.hxx  Dimps__Game__Battle__Chara__Actor.cxx  Dimps__Game__Battle__Chara__Actor.hxx  Dimps__Game__Battle__Chara__Unit.cxx  Dimps__Game__Battle__Chara__Unit.hxx  Dimps__Game__Battle__Command__Unit.cxx  Dimps__Game__Battle__Command__Unit.hxx  Dimps__Game__Battle__Effect.cxx  Dimps__Game__Battle__Effect.hxx  Dimps__Game__Battle__GameManager.cxx  Dimps__Game__Battle__Hud.cxx  Dimps__Game__Battle__Hud.hxx  Dimps__Game__Battle__System.cxx  Dimps__Game__Battle__System.hxx  Dimps__Game__Battle__Training.hxx  Dimps__Game__Battle__Vfx.cxx  Dimps__Game__Battle__Vfx.hxx  Dimps__Game__GameMementoKey.hxx  Dimps__Math.cxx  (+57 more)
src/launcher/: discovery.cxx  discovery.hxx  launcher.cxx
src/overlay/: overlay.cxx  overlay.h
src/session/: interactive_test.cxx  sf4e__SessionClient.cxx  sf4e__SessionClient.hxx  sf4e__SessionProtocol.cxx  sf4e__SessionProtocol.hxx  sf4e__SessionServer.cxx  sf4e__SessionServer.hxx
src/sf4e/: sf4e.cxx  sf4e.hxx  sf4e__Event.cxx  sf4e__Event.hxx  sf4e__Game.cxx  sf4e__Game.hxx  sf4e__GameEvents.cxx  sf4e__GameEvents.hxx  sf4e__Game__Battle.cxx  sf4e__Game__Battle.hxx  sf4e__Game__Battle__Action.cxx  sf4e__Game__Battle__Action.hxx  sf4e__Game__Battle__Effect.cxx  sf4e__Game__Battle__Effect.hxx  sf4e__Game__Battle__Hud.cxx  sf4e__Game__Battle__Hud.hxx  sf4e__Game__Battle__System.cxx  sf4e__Game__Battle__System.hxx  sf4e__Game__Battle__Vfx.cxx  sf4e__Game__Battle__Vfx.hxx  sf4e__Pad.cxx  sf4e__Pad.hxx  sf4e__Platform.cxx  sf4e__Platform.hxx  sf4e__UserApp.cxx  sf4e__UserApp.hxx
src/sidecar/: sidecar.cxx  sidecar.h  sidecar.hxx
vcpkg-ports/ggpo/: install-cmake-export.patch  portfile.cmake  vcpkg.json
vcpkg-ports/valvefilevdf/: portfile.cmake  vcpkg.json
vcpkg-triplets/: x86-windows-wchar-filenames.cmake
